--- a/angular/online learning system/package.json
+++ b/angular/online learning system/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
     "bootstrap": "^5.3.2",
+    "jwt-decode": "^4.0.0",
     "ng-angular-popup": "^0.5.2",
     "ngx-toastr": "^18.0.0",
     "rxjs": "~7.8.0",
